finished the header nav basics. finally got it wrapping correctly

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,58 @@
     font-family: 'Poppins', sans-serif;
 }
 
+html{
+    font-size: 100%;
+}
+
+/* Header and Nav Styles */
+
+header{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    background-color: rgb(45, 45, 45);
+    padding: 1rem;
+    width: 100%;
+    color: #fff;
+    text-align: center;
+}
+
+.header-box1{
+    flex: 1 1 20%;
+}
+
+.header-box2{
+    flex: 1 1 40%;
+}
+
+.header-box3{
+    flex: 1 1 20%;
+}
+
+.header-box3 button{
+    background-color: rgb(72, 94, 139);
+    color: #fff;
+    padding: 4px 10px;
+    border: none;
+}
+
+header nav{
+    display: flex;
+    flex-wrap: wrap;
+    flex: 0 0 500px;
+    gap: 1rem;
+    justify-content: center;
+}
+
+header nav a{
+    flex: 0 0 20%;
+    text-decoration: none;
+    color: #fff;
+}
+
+/* Main Body Styles */
+
 main, footer{
     width: 90%;
     margin: 0 auto;
@@ -22,5 +74,13 @@ h1, h2, h3, h4, h5, h5{
 header{
     background-color: rgb(45, 45, 45);
     padding: 2rem;
+}
+
+.logo{
+    width: 70%;
+}
+
+.logo img{
+    width: 100%;
 }
 
